# wiki-gap

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
deploy/: wiki-gap-crawl.service  wiki-gap-crawl.timer  wiki-gap.service
docs/: phase-1.1-coverage-flag.md  user-page-drafts.md  user-page-guide.md
scripts/: add_qid.py  init_db.py  insert_japan_section.py  run_crawl.py  translate_n_of_1.py
src/crawler/: mediawiki.py  pageviews.py  pipeline.py  wikidata.py
src/db/: queries.py  schema.sql
src/scoring/: gap.py
src/translations/: link_check.py  service.py  term_check.py  term_dictionary.json  wikitext.py
src/user_page/: service.py
src/web/: app.py
src/web/static/: app.css  preview.css  publish.js  translate.css  translate.js  user_page.js
src/web/templates/: index.html  preview.html  translate.html  translations_index.html  user_page.html
src/wiki_auth/: client.py  oauth.py  service.py
